--- a/templates/application/2.html
+++ b/templates/application/2.html
@@ -1,8 +1,41 @@
 {% extends 'application/page.html' %}
 {% block page %}2{% endblock %}
-{% block name %}test2{% endblock %}
+{% block name %}Education{% endblock %}
 {% block form %}
-<input type="checkbox" name="test" value="a" {{'checked' if 'a' in data.get('test', [])}}>
-<input type="checkbox" name="test" value="b" {{'checked' if 'b' in data.get('test', [])}}>
-<input type="checkbox" name="test" value="c" {{'checked' if 'c' in data.get('test', [])}}>
+<div>
+    Please list up to five TWOWs in which you have participated:
+</div>
+{%- for i in range(5): %}
+
+<hr>
+
+<div>
+    Name:
+    {{text('name' ~ i)}}
+</div>
+
+<div>
+    Date of entry:
+    {{month('entry' ~ i)}}
+</div>
+
+<div>
+    Date of graduation:
+    {{month('graduation' ~ i)}}
+</div>
+
+<div>
+    Class rank:
+    {{number('rank' ~ i, min=1)}}
+    out of
+    {{number('size' ~ i, min=1)}}
+</div>
+
+<div>
+    GPA:
+    {{number('gpa' ~ i, min=0, max=100, step=0.01)}}
+    %
+    {{indent(4, radio('weight' ~ i, ['Normalized', 'Standardized']))}}
+</div>
+{%- endfor %}
 {% endblock %}
