--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,1 +1,18 @@
-/*background-color: #4D6396;*/
+.base_header {
+    margin: -8px -8px 8px -8px;
+    padding: 8px;
+    background-color: #4D6396;
+    color: #FFFFFF;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+}
+
+.base_header > .base_login {
+    float: right;
+    text-align: right;
+    font-size: 16px;
+}
+
+.base_header > .base_login a {
+    color: #FFFFFF
+}
