update login flow

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <div class="base_header">
-            UNIVERSITYTWOW
+            <a href="{{url_for('index')}}">UniversityTWOW</a>
             {% if discord.authorized %}
             <div class="base_login">
                 <div>
