--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,5 @@
 {% block css %}{% endblock %}
 {% block js %}{% endblock %}
 {% block body %}
-<a href="{{url_for('login')}}">Click here to log in using UniversityTWOW Enterprise Authentication</a>
+<a href="{{url_for('application')}}">Click here to log in using UniversityTWOW Enterprise Authentication</a>
 {% endblock %}
