tos/privacy policy

--- a/templates/application.html
+++ b/templates/application.html
@@ -23,7 +23,14 @@
         <div>
             <input type="checkbox" id="application_tos" required>
             <label for="application_tos">
-                I have read and agree to the Terms of Service and Privacy Policy
+                I have read and agree to the
+                <span class="tooltip" title="UniversityTWOW Terms of Service:&#10;By using this website you accept and agree to be bound by these Terms of Service, including by accepting and complying with all our Terms of Use.&#10;Website encryption/security: By logging into this website you acknowledge the websites encryption/security policy. Under the Terms of Use for this website, the encryption/security policy applies to all aspects of this website including access by users to: User privacy; The technical aspects of this website; new software (including changes to the software, themes, extensions, etc.) hosted by the University is governed solely by the following Terms of Service:&#10;&#10;Q. What are the copyright limitations on my access to and use of the free and open-source software packages on these pages? A. The license terms that you choose to be bound by must not:&#10;&#10;(i) impede your use of the software or installation of any software in the package or software installer. In the event of incompatibility between you and the software, the terms of your license agreement with, or the terms and conditions of, the applicable third-party service provider for the software, you are permitted to discontinue use of the software or install any software in the package or software installer.&#10;&#10;(ii) restrict your use of the software or installation of any software in the package or software installer to the exclusive use and enjoyment of you and your immediate family and of one other individual, each such use and enjoyment to be exclusive of use of your photographs, graphics, or other similar materials in connection with the Website and of your visit to the Website, and of the Services on any and all non-University computer systems, devices, or networks.&#10;&#10;(iii) with respect to any copy, duplication, redistribution, or publication of any work based on or based on or related to the Website, Services, or the use of such material, you hereby grant to Microsoft Corporation a worldwide, irrevocable, perpetual, non--exclusive, royalty-free license for such use of such material to occur in any medium now known or later developed.">
+                    Terms of Service
+                </span>
+                and
+                <span class="tooltip" title="all your information are belong to us">
+                    Privacy Policy
+                </span>
             </label>
         </div>
         <div>
