admissions decisions are released!

--- a/templates/application.html
+++ b/templates/application.html
@@ -2,10 +2,21 @@
 {% block css %}{% endblock %}
 {% block js %}{% endblock %}
 {% block body %}
-{% if submitted %}
+{% if submitted or accepted %}
 <div>
     Thank you for applying to UniversityTWOW. If you need to edit your application or submit additional materials, please contact the Admissions Office.
 </div>
+{% if accepted %}
+<h3>
+    Status Update
+</h3>
+<div>
+    An update to your application was last posted 1 July, 2021.
+</div>
+<div>
+    Please click <a href="{{url_for('are_you_sure')}}" onclick="return confirm('You are about to be redirected to view your admissions decision. Before you proceed, make sure to be ready to receive your verdict. There are no \'are you sure that you are ready?\' screens.')">here</a> to view it.
+</div>
+{% endif %}
 {% elif not next_page %}
 <div>
     No application was found on file.
