--- a/templates/application/page.html
+++ b/templates/application/page.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
-{% block css %}page.css{% endblock %}
-{% block js %}page.js{% endblock %}
+{% block css %}form.css{% endblock %}
+{% block js %}form.js{% endblock %}
 {% block body %}
 <form method="POST">
-    <input type="submit" name="next" value="SAVE SECTION" id="page_save" disabled>
+    <input type="submit" name="next" value="SAVE SECTION" id="form_save" disabled>
     <fieldset>
         <legend>
             {% block name %}{% endblock %}
