class pages (wip)

--- a/templates/application.html
+++ b/templates/application.html
@@ -2,11 +2,11 @@
 {% block css %}{% endblock %}
 {% block js %}{% endblock %}
 {% block body %}
-{% if submitted or accepted %}
+{%- if submitted or accepted %}
 <div>
     Thank you for applying to UniversityTWOW. If you need to edit your application or submit additional materials, please contact the Admissions Office.
 </div>
-{% if accepted %}
+{%- if accepted %}
 <h3>
     Status Update
 </h3>
@@ -16,15 +16,15 @@
 <div>
     Please click <a href="{{url_for('are_you_sure')}}" onclick="return confirm('You are about to be redirected to view your admissions decision. Before you proceed, make sure to be ready to receive your verdict. There are no \'are you sure that you are ready?\' screens.')">here</a> to view it.
 </div>
-{% endif %}
-{% elif not next_page %}
+{%- endif %}
+{%- elif not next_page %}
 <div>
     No application was found on file.
 </div>
 <form method="POST">
     <input type="submit" value="Start a new application">
 </form>
-{% elif finished %}
+{%- elif finished %}
 <div>
     Are you ready to submit your first-year application to UniversityTWOW's class of 2021?
 </div>
@@ -62,12 +62,12 @@
 <div>
     Click <a href="/application/{{next_page}}">here</a> to resume editing your application.
 </div>
-{% else %}
+{%- else %}
 <div>
     Your first-year application is incomplete.
 </div>
 <div>
     Click <a href="/application/{{next_page}}">here</a> to resume editing your application.
 </div>
-{% endif %}
+{%- endif %}
 {% endblock %}
