--- a/templates/classes.html
+++ b/templates/classes.html
@@ -11,9 +11,9 @@
     Welcome to your UniversityTWOW student portal! Please select a class below to navigate to its homepage.
 <div>
 <ul>
-    {%- for class in classes %}
+    {%- for class_ in classes %}
     <li>
-        <a href="{{url_for('class_page', class_id=class|replace('404', '440'))}}">{{class_list[class]['title']}}</a>
+        <a href="{{url_for('class_page', class_id=class_['id']|replace('404', '440'))}}">{{class_['title']}}</a>
     </li>
     {%- endfor %}
 </ul>
