--- a/templates/application.html
+++ b/templates/application.html
@@ -17,7 +17,11 @@
     Please click <a href="{{url_for('are_you_sure')}}" onclick="return confirm('You are about to be redirected to view your admissions decision. Before you proceed, make sure to be ready to receive your verdict. There are no \'are you sure that you are ready?\' screens.')">here</a> to view it.
 </div>
 {%- endif %}
-{%- elif not next_page %}
+{%- else %}
+<div>
+    Applications to UniversityTWOW's Class of 2021 are now closed. Thank you for your interest.
+</div>
+{%- endif %}{# ARCHIVED {%- elif not next_page %}
 <div>
     No application was found on file.
 </div>
@@ -69,5 +73,5 @@
 <div>
     Click <a href="/application/{{next_page}}">here</a> to resume editing your application.
 </div>
-{%- endif %}
+{%- endif %}#}
 {% endblock %}
