--- a/templates/classes/class_page/link_page/submission_page.html
+++ b/templates/classes/class_page/link_page/submission_page.html
@@ -11,21 +11,5 @@
 <h3>
     Submission from {{submission['id']}}
 </h3>
-{%- if submission['comment'] %}
-<p>
-    {{submission['comment']}}
-</p>
-{%- endif %}
-<hr>
-<div>
-    {%- if submission['type'] == 'link' %}
-    <a href="{{submission['link']}}">{{submission['link']}}</a>
-    {%- elif submission['type'] == 'embed' %}
-    <iframe src="{{submission['link']}}" width=1024 height=576></iframe>
-    {%- elif submission['type'] == 'image' %}
-    <img src="{{submission['link']}}">
-    {%- else %}
-    Unsupported material type
-    {%- endif %}
-</div>
+{{display(submission)}}
 {% endblock %}
