--- a/templates/classes/class_page/link_page/submission_upload.html
+++ b/templates/classes/class_page/link_page/submission_upload.html
@@ -13,7 +13,7 @@
     {%- filter indent(width=8) %}
 {{text('link')}}
 {{text('comment', required=False)}}
-{{select('type', {'embed': 'Embedded Document', 'image': 'Embedded Image', 'link': 'Raw Link'})}}
+{{select('type', {'empty': 'No Link', 'embed': 'Embedded Document', 'image': 'Embedded Image', 'link': 'Raw Link'})}}
     {%- endfilter %}
     </fieldset>
     <input type="submit" value="UPLOAD" id="form_save">
